added backend check for provider

--- a/providers/ger_default-providers.conf
+++ b/providers/ger_default-providers.conf
@@ -26,6 +26,7 @@
 217.237.150.141: T-Online Alb-Donau-Kreis und Ulm
 217.237.151.161: T-Online Stuttgart
 217.237.150.188: T-Online Standort unbekannt
+194.25.2.129
 
 [arcor]
 145.253.2.11: dns1.arcor-ip.de
@@ -88,3 +89,14 @@
 $master
 1.1.1.1
 1.0.0.1
+
+[quad9]
+9.9.9.9
+149.112.112.112
+
+[Digitale Gesellschaft Schweiz]
+185.95.218.42
+185.95.218.43
+
+[Digitalcourage]
+5.9.164.112 
